0.545 2025-05-29
  [Requirement Changes]
    * Windows must support CreateSymbolicLinkW and SYMBOLIC_LINK_FLAG_ALLOW_UNPRIVILEGED_CREATE.
  [Big Fix]
    * Fix a bug that SYMBOLIC_LINK_FLAG_ALLOW_UNPRIVILEGED_CREATE is not specified in symlink method.
    * Fix bugs related to wide character in symlink method in Windows.
    
0.543 2025-05-28
  [Bug Fix]
    * Fix bugs that Sys#stat, Sys#lstat, Sys#readlink, Sys#_realpath methods fails
      in some cases that the file is opened.
    
0.542 2025-05-27
  [Bug Fix]
    * Fix bugs.
      
      Failed test 'st_dev'
      https://github.com/yuki-kimoto/SPVM-Sys/issues/92
      
      setpriority failed on this environment
      https://github.com/yuki-kimoto/SPVM-Sys/issues/93
      
0.541 2025-05-27
  [Improvement with Incompatible Changes]
    * In this release, UTF-8 strings passed as arguments to the methods that calls Windows system calls are now handled correctly.
      Sys#opendir, Sys::IO#opendir
      Sys#closedir, Sys::IO#closedir
      Sys#readdir, Sys::IO#readdir
      Sys#rewinddir, Sys::IO#rewinddir
      Sys#telldir, Sys::IO#telldir
      Sys#seekdir, Sys::IO#seekdir
      Sys::IO::DirStream#DESTROY
      Sys::IO::Dirent#d_name
      Sys#readlink.
      Sys#lstat, Sys::IO#lstat
      Sys#stat, Sys::IO#stat
  [Incompatible Changes]
    * Remove Sys::IO::Windows#readlink method and add win_readlink method.
  
  [New Features]
    * Add Sys::IO::Windows#is_symlink method.
  [Changes]
    * Sys#l method use Sys::IO::Windows#is_symlink method.
    * Sys::IO::Windows#realpath resolve symbolic link by own and open a file as a reparse point.
  [Internal Changes]
    * Rewrite Sys::IO::Windows#lstat completly.
    * Rewrite Sys::IO::Windows#stat completly.
    * Add Sys::IO::Windows#_follow_symlinks_to method.
0.540 2025-05-23
  [Incompatible Changes]
    * Sys#readdir method returns a file name instead of a directory entry.
0.540 2025-05-23
  [Incompatible Changes]