@@ -1,6 +1,7 @@
 0.545 2025-05-29
   [Requirement Changes]
     * Windows must support CreateSymbolicLinkW and SYMBOLIC_LINK_FLAG_ALLOW_UNPRIVILEGED_CREATE.
+      #define _WIN32_WINNT 0x0A00
   [Big Fix]
     * Fix a bug that SYMBOLIC_LINK_FLAG_ALLOW_UNPRIVILEGED_CREATE is not specified in symlink method.
     * Fix bugs related to wide character in symlink method in Windows.
